--- a/.env.examle
+++ b/.env.examle
@@ -6,7 +6,7 @@ DATABASE_USER = "usr"
 DATABASE_PASS = ""
 DATABASE_NAME = "Test"
 PROVIDER_API_KEY = ""
-PROVIDER_API_URL = "https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd"
+PROVIDER_API_URL = "https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&ids=bitcoin%2Cethereum"
 UPDATE_TIME_IN_MINUTES = 5
 READ_TIMIEOT_SEC = 10
 WRITE_TIMIEOT_SEC = 10
